# FlatboxEditor

./: .gitignore  App.axaml  App.axaml.cs  FlatboxEditor.csproj  FlatboxEditor.sln  Makefile  Program.cs  README.md  SonjaEditor.csproj  SonjaEditor.sln  ViewLocator.cs  app.manifest  debug.sh
FlatboxEditor.FFI/: CString.cs  Cargo.toml  Libs.cs  Native.cs
FlatboxEditor.FFI/lib/: Cargo.toml
FlatboxEditor.FFI/lib/src/: lib.rs  render.rs  string.rs
FlatboxEditor.FFI/native_macro/: Cargo.toml
FlatboxEditor.FFI/native_macro/src/: func_type.rs  lib.rs  native_funcs.rs
FlatboxEditor.FFI/src/: camera.rs  lib.rs  logger.rs  opengl.rs  render.rs  scene.rs
FlatboxEditor.FFI/src/editor/: camera.rs  grid.rs  material.rs  mod.rs  model.rs  render.rs  scene.rs  transform.rs
FlatboxEditor.FFI/src/shaders/: grid.fs
FlatboxEditor.MVVM/ViewModels/: EditorViewModel.cs  MainWindowViewModel.cs  ViewModelBase.cs
FlatboxEditor.MVVM/Views/: EditorView.axaml  EditorView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MessageBox.axaml  MessageBox.axaml.cs
FlatboxEditor.Render/: Camera.cs  Class1.cs  Color.cs  Editor3D.cs  Grid.cs  Logger.cs  Material.cs  Model.cs  Renderer.cs  Transform.cs
FlatboxEditor.Scene/: Class1.cs
FlatboxEditor.Scenes/: Scene.cs
FlatboxEditor.UI/Components/: Editor3D.cs  FlatButton.cs
FlatboxEditor.UI/Data/: EditorData.cs
FlatboxEditor.UI/View/: EditorView.cs
SonjaEditor.FFI/: CString.cs  Libs.cs
SonjaEditor.FFI/lib/: Cargo.toml
SonjaEditor.MVVM/ViewModels/: ViewModelBase.cs  (+1 more)
SonjaEditor.Render/: Class1.cs
SonjaEditor.Scene/: Class1.cs
(+3 files in other folders)
