[package]
name = "native"
version = "0.1.0"
edition = "2021"

[dependencies]
flatbox_assets = { path = "../../flatbox/crates/assets" }
flatbox_render = { path = "../../flatbox/crates/render", default-features = false, features = ["ecs"] }
flatbox_core = { path = "../../flatbox/crates/core" }

[lib]
name = "native"
crate-type = ["cdylib"]